--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4"
   }
 }
